--- a/blog-angular/src/app/components/big-card/big-card.component.html
+++ b/blog-angular/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,31 @@
-<p>big-card works!</p>
+<div class="container__big-card">
+  <div class="big-card__img">
+    <img
+      src="../../../assets/img/nanotecnologia.jpg"
+      alt=""
+    />
+  </div>
+  <div class="big-card__title">
+    <h1>
+      Explorando o futuro através da nanotecnologia: Impacto, Inovação e
+      Infinitas Possibilidades
+    </h1>
+  </div>
+  <div class="big-card__description">
+    <p>Desvendando o Infinitamente Pequeno: O Mundo Fascinante da Nanotecnologia
+    Bem-vindo ao emocionante reino da nanotecnologia, onde a ciência mergulha no
+    nível mais fundamental da matéria para desbloquear um vasto universo de
+    possibilidades. Na escala nanométrica, medidas em bilionésimos de metro, os
+    materiais assumem propriedades extraordinárias, abrindo caminho para avanços
+    revolucionários em campos tão diversos quanto a medicina, a eletrônica e a
+    energia. Imagine manipular átomos e moléculas como se fossem peças de um
+    quebra-cabeça cósmico, criando estruturas minúsculas com poderes
+    surpreendentes. A nanotecnologia permite exatamente isso, oferecendo um
+    arsenal de ferramentas para projetar e fabricar materiais sob medida, com
+    propriedades precisamente controladas. Na medicina, a nanotecnologia promete
+    revolucionar o tratamento de doenças, possibilitando terapias direcionadas
+    às células doentes, diagnósticos ultrassensíveis e sistemas de liberação de
+    medicamentos inteligentes. Imagine nano robôs navegando pelo corpo humano,
+    detectando e reparando danos antes mesmo de serem percebidos.</p>
+  </div>
+</div>
