--- a/blog-angular/src/styles.scss
+++ b/blog-angular/src/styles.scss
@@ -1,6 +1,7 @@
-*{
-    background-color: black;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  background-color: rgb(36, 36, 36);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
