feat: small-card

--- a/blog-angular/src/app/components/small-card/small-card.component.html
+++ b/blog-angular/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,11 @@
-<p>small-card works!</p>
+<div class="container__small-card">
+  <div class="content-small-card">
+    <div class="small-card__img">
+      <img src="../../../assets/img/nanotecnologia.jpg" alt="" />
+    </div>
+    <div class="small-card_title">
+      <h1 class="small-card-title">Biotec do futuro</h1>
+    </div>
+  </div>
+</div>
+<hr />
