--- a/blog-angular/src/app/pages/home/home.component.html
+++ b/blog-angular/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <app-menu-title></app-menu-title>
-<div class="articles">
+<div class="container-articles">
   <div class="articles-main">
     <app-big-card></app-big-card>
   </div>
