--- a/blog-angular/src/app/components/big-card/big-card.component.scss
+++ b/blog-angular/src/app/components/big-card/big-card.component.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  margin: 1rem;
+  margin: 0 1rem;
   border-radius: 5px;
   .big-card__img {
     img {
