--- a/blog-angular/src/app/components/navbar/navbar.component.html
+++ b/blog-angular/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,9 @@
-<p>navbar works!</p>
+<div class="container__navbar">
+    <nav>
+        <ul>
+            <li><a href="">Linkedin</a></li>
+            <li><a href="">GIthub</a></li>
+            <li><a href="">Portfolio</a></li>
+        </ul>
+    </nav>
+</div>
