--- a/blog-angular/src/app/pages/home/home.component.html
+++ b/blog-angular/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
+<header>
+  <app-navbar></app-navbar>
+</header>
 <app-menu-title></app-menu-title>
 <div class="container-articles">
   <div class="articles-main">
